fix(styling): Grid Menu & Col Picker overflow in Firefox (#845)
- remove overflow-x for all browsers, we don't need a scroll to show at any point in time for the x coordinate
- Firefox has issues when overflow (auto) shows the scroll, it shows up over the text while Chrome seems to add necessary padding to avoid that problem, so we can add a fixed right padding for Firefox only, we don't want to make it too wide because that would look funny

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -296,6 +296,7 @@ $slick-column-picker-close-btn-position-right:              5px !default;
 $slick-column-picker-close-btn-position-top:                0px !default;
 $slick-column-picker-min-width:                             150px !default;
 $slick-column-picker-padding:                               6px !default;
+$slick-column-picker-padding-firefox:                       6px 14px 6px 6px !default;
 $slick-column-picker-divider-width:                         100% !default;
 $slick-column-picker-item-border:                           1px solid transparent !default;
 $slick-column-picker-item-border-radius:                    0px !default;
@@ -356,6 +357,7 @@ $slick-menu-item-hover-border:                              1px solid #d5d5d5 !d
 $slick-menu-item-hover-color:                               #fafafa !default;
 $slick-menu-item-padding:                                   2px 6px !default;
 $slick-menu-item-width:                                     100% !default;
+$slick-menu-item-white-space:                               nowrap !default;
 $slick-menu-icon-font-size:                                 $slick-icon-font-size !default;
 $slick-menu-icon-line-height:                               calc(#{$slick-menu-icon-font-size} + 2px) !default;
 $slick-menu-item-width-when-button:                         calc(100% - #{$slick-menu-close-btn-width}) !default;
@@ -365,6 +367,7 @@ $slick-menu-line-height:                                    24px !default;
 $slick-menu-min-width:                                      140px !default;
 $slick-menu-option-list-margin-bottom:                      6px !default;
 $slick-menu-padding:                                        6px !default;
+$slick-menu-padding-firefox:                                6px 14px 6px 6px !default;
 $slick-menu-title-container-display:                        flex !default;
 $slick-menu-title-container-align-items:                    flex-start !default;
 $slick-menu-title-container-justify-content:                flex-end !default;
@@ -797,6 +800,7 @@ $slick-pagination-page-input-bgcolor:                       #fafbed !default;
 $slick-pagination-page-input-height:                        26px !default;
 $slick-pagination-page-input-width:                         50px !default;
 $slick-pagination-page-input-padding:                       2px !default;
+$slick-pagination-page-select-bg-color:                     #fff !default;
 $slick-pagination-page-select-border-radius:                3px !default;
 $slick-pagination-page-select-padding:                      0 0 2px 2px !default;
 $slick-pagination-page-select-height:                       32px !default;
